--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.2",
     "@react-email/components": "^0.0.36",
+    "@vercel/analytics": "^1.5.0",
     "ai": "^4.3.10",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
