--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@radix-ui/react-switch": "^1.2.2",
     "@react-email/components": "^0.0.36",
     "@vercel/analytics": "^1.5.0",
-    "ai": "^4.3.10",
+    "ai": "^5.0.75",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
@@ -27,7 +27,7 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.503.0",
     "mongoose": "^8.13.2",
-    "next": "15.3.1",
+    "next": "^15.5.6",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "openai": "^4.96.0",
