--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.2",
     "@react-email/components": "^0.0.36",
+    "@react-email/render": "^2.0.0",
     "@vercel/analytics": "^1.5.0",
     "ai": "^5.0.75",
     "axios": "^1.9.0",
@@ -30,6 +31,7 @@
     "next": "^15.5.6",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.11",
     "openai": "^4.96.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
